--- a/themes/awesome/assets/css/pages/_default.scss
+++ b/themes/awesome/assets/css/pages/_default.scss
@@ -77,6 +77,9 @@
       font-size: var(--font-size-600);
       margin-top: 1rem;
     }
+    &__ul {
+      margin-block: 1rem;
+    }
   }
   &__nav {
     &__heading {
